--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/passport-google-oauth20": "^2.0.16",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
@@ -62,6 +63,7 @@
     "memorystore": "^1.6.7",
     "nanoid": "^5.1.5",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
